--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
   "description": "get GIT infos and more",
   "authors": [
     {
-      "name": "tweetpressfr",
-      "email": "jmaury@beapi.fr"
+      "name": "Be API",
+      "email": "technique@beapi.fr"
     }
   ],
   "require": {
