--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,7 @@
     }
   ],
   "require": {
-    "php": ">=5.3.0",
-    "symfony/process": ">=2.2"
+    "php": ">=5.4.0"
   },
   "type" : "wordpress-plugin",
   "autoload": {
